assets/main.css
/* ... */
@font-face {
    font-family: 'handwriting';
    src: url('Handwriting-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'reggie-block';
    src: url('Reggie_block-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'reggie-3d-plain';
    src: url('Reggie_3d_plain-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'reggie-3d-fill';
    src: url('Reggie_3d_fill-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'reggie-3d-dash';
    src: url('Reggie_3d_dash-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}

html{
	height: 100%;
	scroll-behavior: smooth;
	font-size: 14px;
}
body{
	font-family: var(--display-font), sans-serif;
	font-weight: 300;
	font-style: regular;
	color: var(--text-color);
	margin:	0 auto;
	/* parallax */
	height: 100%;
	font-size: 14px;
}
body:after{
	display:none;
	content: url("regina-logo-2.svg") url("profile-fast.gif");
   }

a{
	text-decoration: none;
	color: var(--text-color)
}
a:hover{
	text-decoration: underline;
}
.footer{
	background-color: var(--card-color);
	padding: 20px 40px;
	margin: 0 auto;
	display: flex;
	justify-content: space-between;
	font-size: 1.2em;
}
b{
	color: var(--text-header-color);
	font-weight: 400;
}
strong{
	font-weight: 600;
}
.home_container{
	background-color: #1A1C1D;
	margin: 0 0 50px 0;
	/* height: 1000px;  */
	width: 100%;
	max-width: 800px;
	margin: 0 auto;
	margin-bottom: 50px;
	padding-top: 100px;
	padding-bottom: 20px;
	position: relative;
}
.home_text{
	width: 50%;
	max-width: 800px;
	margin: auto;
	margin-bottom: 20px;
	padding: 20px;
	position: absolute;
	border-radius: 10px;
	top: 100px;
	z-index: 1000;
	left: 30px;
	background-color: #1a1c1d99;

}
.h1{
	font-size: 4rem;
}
.white{
	color: white;
}
.text{
	font-size: 1.2rem;
	font-family: var(--body-font), sans-serif;
}
.bg_black{
	background-color: #1A1C1D !important;
}
.bg_white{
	background-color: white !important;
}
.dark{
	background-color: #1A1C1D;
	color: white !important;
}
.gif_container{
	height: 600px;
	width: 800px;
	background-color: #1A1C1D;
	position: relative;
	margin: auto;
	overflow: hidden;
	border-radius: 9px;
	margin: 0 auto;
	/* border: 6px solid #B2B2B2; */
  }
  .bike_container{
	position: absolute;
	left: 25vw;
	width: 230px;
	bottom: 0;
  }
  .layer1{
	width: 16000px;
	height: 100%;
	position: absolute;
	/* right: -14000px; */
	/* top: 250px; */
	animation: move1 50s linear infinite;
  }
  .layer2{
	width: 24000px;
	height: 100%;
	position: absolute;
	/* right: -21000px; */
	/* top: 250px; */
	animation: move2 50s linear infinite;
  }
  .layer3{
	width: 32000px;
	height: 100%;
	position: absolute;
	/* right: -28000px; */
	/* top: 250px; */
	animation: move3 50s linear infinite;
  }
  
  @keyframes move1 {
	0% {
	 transform: translateX(-4000px);
	}
	100% { 
	  transform: translateX(-12000px);
	}
  }
  @keyframes move2 {
	0% {
	 transform: translateX(-6000px);
	}
	100% { 
	  transform: translateX(-18000px);
	}
  }
  @keyframes move3 {
	0% {
	 transform: translateX(-8000px);
	}
	100% { 
	  transform: translateX(-24000px);
	}
  }
.outerr{
	width: 95%;
	height: 60vh;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  overflow: hidden;
  border-radius: 9px;
  /* display: grid; */
}
.reveal{
	position: relative;
	transform: translateY(50px);
	opacity: 0;
	transition: 1s all ease;
}
.reveal.active{
	transform: translateY(0);
	opacity: 1;
}
#container{
  perspective: 50px;
  position: relative;
  /* position: absolute; */
  /* grid-column: 1; */
  /* grid-row: 1; */
}
#inner {
  	  /* The image used */
		/* background-image: url('heroshot.jpg'); */
		border-radius: 9px;
		/* margin: 0 0 50px 0; */
		margin: 0 auto;
		height: 70vh; 
		width: 100vw;
		/* Create the parallax scrolling effect */
		background-attachment: fixed;
		/* background-position: right bottom; */
		/* background-position: center; */
		background-repeat: no-repeat;
		background-size: cover;
		flex-wrap: wrap;
		display: flex;
		align-items: right;
		align-content: center;
		position: right;
		/* padding-left: 40px; */
		/* display: grid; */

  transition: transform 0.5s;
  -webkit-transition: transform 0.5s;
  -moz-transition: transform 0.5s;
  -o-transition: transform 0.5s;
}
.hero-image{
	width: 120%;
	margin: 0 auto;
	position: absolute;
	right: 0;
	bottom: 0;

}
/* b{
	color: black;
}

h1{
	font-family: Cabin;
	font-size: 48px;
	font-size: 6vw;
	color: black;
}
h2{
	font-family: Cabin;
	font-size: 24px;
	color: black;
}
h3{
	font-family: Cabin;
	font-weight: 300;
	font-size: 14pt;
	font-size: 2vw;
} */

.head{
	overflow: hidden;
    background-color: white;
    position: fixed; 
    left: 0;
    top: 0; 
    width: 100%;
    /* box-shadow: 0 1px 30px rgba(36, 53, 53, 0.25); */
	z-index: 100;
	/* padding: 40px; */
	display: flex;
	align-items: center;
}
.head.dark{
	background-color:#1A1C1D;
}
.borderBottom{
	border-bottom: 1px solid #e0e0e0;

}
.container{
	width: 85%;
	margin: 0 auto;
	padding: 40px;
}
.container_center{
	display: flex;
	justify-content: center;
}
.padding_nav{
	padding-top: 120px
}
.padding_resume{
	padding-top: 60px
}
.content{
	width: 95%;
	margin: 0 auto;
	min-height: 100vh;
}
.header_home{
	background-color: var(--highlight-color);
	height: 70vh;
	border-radius: 9px;
	margin: 0 0 50px 0;
}
/* ... */

